--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mass Image Processor Pro</title>
+    <title>Ресайзы для баннеров ЧГ</title>
     <script src="https://cdn.tailwindcss.com"></script>
 <script type="importmap">
 {
